@@ -142,10 +142,6 @@ AC_CHECK_TYPE(ulong, unsigned long)
 dnl checks for uchar
 AC_CHECK_TYPE(uchar, unsigned char)
 
-dnl see if timezone is an int
-MY_DECL_TIMEZONE
-MY_DECL__TIMEZONE
-
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_TYPE_SIZE_T
 AC_HEADER_TIME
